# event-driven-workers

./: README.md  docker-compose.yml  dockerfile  env.example  pyproject.toml
src/worker_system/config/: settings.py
src/worker_system/core/: database.py  logger.py
src/worker_system/db/: database_tables.py
src/worker_system/integrations/: nats.py  pubsub.py  storage.py
src/worker_system/shared/: base_worker.py
src/worker_system/workers/example/: job.py  main.py  model.py
