[project]
name = "event-worker-template"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [

    # --- Database ---
    "sqlalchemy==2.0.31",
    "asyncpg==0.31.0",
    "pg8000",    

    # --- Google Cloud (puedes borrar luego si quieres) ---
    "google-genai==1.54.0",
    "google-cloud-storage==3.5.0",
    "google-cloud-pubsub==2.33.0",
    "cloud-sql-python-connector[asyncpg]==1.19.0",

    # Core
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",

    # Logging
    "colorlog==6.10.1",

    # PubSub
    "google-cloud-pubsub==2.33.0",
    "nats-py>=2.11.0",

    # Storage (opcional)
    "minio==7.2.5",

    # Utils
    "python-dotenv==1.2.1",
]